# Team36-Smart-Pet-Feeder

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE  README (1).docx  README.md  Readme  echarts.min.js  include  index.html  picamera.esm.js  qmqtt_client.cpp  qmqtt_client.h
3rd/: 3rd.rar
Project/: CMakeLists.txt  wiringpi_3.14_arm64.deb
Project/include/: MQTTClientWrapper.hpp  SerialPort.h  database.h
Project/src/: SerialPort.cpp  database.cpp  main.cpp
RaspberryPi-WebRTC-main/src/: SerialPort.cpp  qmqtt_client.cpp
include/: MQTTClientWrapper.hpp  SerialPort.h  database.h  hx711.hpp  qmqtt_client.h
paho.mqtt.c-1.3.14/: .github  .gitignore  .gitreview  .travis.yml  CMakeLists.txt  appveyor.yml  cmake-build.sh
paho.mqtt.c-1.3.14/.github/: README.md
paho.mqtt.c-1.3.14/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
paho.mqtt.c-1.3.14/.github/workflows/: artifact_linux.yml  artifact_macos.yml  build_linux.yml  build_macos.yml  covsync.yml  test_libressl.yml
paho.mqtt.c-1.3.14/build.paho/: CMakeCache.txt
paho.mqtt.c-1.3.14/cmake/: CPackDebConfig.cmake.in  toolchain.linux-arm11.cmake  toolchain.win32.cmake  toolchain.win64.cmake
paho.mqtt.c-1.3.14/cmake/modules/: FindLibreSSL.cmake
paho.mqtt.c-1.3.14/doc/: CMakeLists.txt  DoxyfileV3AsyncAPI.in  DoxyfileV3ClientAPI.in  DoxyfileV3ClientInternal.in
paho.mqtt.c-1.3.14/docs/: index.html
paho.mqtt.c-1.3.14/src/: MQTTClient.h
paho.mqtt.c-1.3.14/test/openssl/: applink.c
paho.mqtt.c-1.3.14/test_package/: conanfile.py  test_package.c
src/: main.cpp
web/: index.html
(+20 files in other folders)
